# ACM

./: # To Do.md  .gitignore  ACM_2.py  ANALYTICS_AUDIT_CRITICAL_ISSUES.md  Analytical Scripts Audit.md  BATCH_ANALYSIS_GUIDE.md  BATCH_CONTINUITY_FIXES.md  BATCH_PROCESSING_STATUS.md  BATCH_RUNNER_README.md  CHANGELOG.md  COMPREHENSIVE_FIX_PLAN.md  COMPREHENSIVE_FRIENDLY_NAMES_SUMMARY.md  CONFIG.md  CONSOLIDATION_SUMMARY.md  CONTINUOUS_FORECASTING_IMPLEMENTATION.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_ANALYSIS_AND_OPTIMIZATION.md  DASHBOARD_COMPREHENSIVE_ANALYSIS.md  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_FIXES_COMPLETION.md  DASHBOARD_FORECAST_FIX.md  DASHBOARD_IMPLEMENTATION_COMPLETE.md  DASHBOARD_ISSUES_ANALYSIS.md  DATABASE_CLEANUP_COMPLETION_REPORT.md  EXECUTIVE_SUMMARY_DASHBOARD.md  EXECUTIVE_SUMMARY_IMPLEMENTATION.md  FIX_COLDSTART_FAILURE.md  FORECASTING_AUDIT_TASK_LIST.md  FORECASTING_CONSOLIDATION.md  FORECASTING_VALIDATION_REPORT.md  FORECAST_CI_FIX_SUMMARY.md  FORECAST_RUL_AUDIT_SUMMARY.md  Forecast Audit.md  Forecast RUL Maintenance Analysis.md  GRAFANA_EMPTY_PANELS_ANALYSIS.md  IMPLEMENTATION_SUMMARY_FORECAST_RUL.md  LOGGING_AUDIT_REPORT.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_PR_SUMMARY.md  (+39 more)
.github/: copilot-instructions.md
ACM/: ACM.py  ACM_ML_Theory_Guide.md  BatchRunACMAllEquipment.ps1  README_ACM_Core.md  __init__.py  acm_artifact_local.py  acm_artifact_local_2.py  acm_brief_local.py  acm_build_artifacts_local.py  acm_core_local.py  acm_core_local_2.py  acm_score_local_2.py  acm_score_window.py  acm_score_window_local.py  aco_core_local.patch  report_charts.py  report_css.py  report_html.py  report_main.py  run_acm.ps1  run_acm_next.ps1  run_acm_simple.ps1
ACM V3/: .gitignore  acm_observe.py
ACM V8 SQL/: # To Do.md  ACM EXPLAINER.md  Forecast Audit.md  README.md  Regime Audit.md  State Management Audit ACM Main.md  Task Backlog.md  cond_pump_output.txt  pyproject.toml
ACM_V2/: Pipeline.md  Tasks.md  Vision  __init__.py  acm_config.yaml  acm_core_local_2.py  acm_evaluate.py  acm_observe.py  acm_payloads.py  acm_pipeline.py  acm_pipeline_core.py  acm_refine.py  acm_report_basic.py  acm_river.py  acm_split_train.py  report_charts.py
ACMnxt/: AGENTS.md  README.md  TASKS.md  __init__.py
ACMnxt_docs/: Readme_Tasks
acmnxt/: README.md  TASKS.md  __init__.py
archive_legacy/: README.md  acm_build_artifacts.py  acm_build_artifacts_local.py  acm_core.py
configs/: config_table.csv
core/: acm.py  acm_main.py  adaptive_thresholds.py  analytics_builder.py  ar1_detector.py  asset_similarity.py  baseline_normalizer.py  baseline_policy.py  calibrated_fusion.py  confidence.py  confidence_model.py  config_history_writer.py  correlation.py  data_contract.py  data_loader.py  decision_policy.py  degradation_model.py  detector_orchestrator.py  detector_protocol.py  drift.py  drift_controller.py  enhanced_forecasting.py  enhanced_forecasting_sql.py  enhanced_rul_estimator.py  episode_culprits_writer.py  episode_manager.py  failure_probability.py  fast_features.py  feature_matrix.py  forecast.py  forecast_deprecated.py  forecast_diagnostics.py  forecast_engine.py  forecasting.py  forecasting_legacy.py  fuse.py  health_state.py  health_tracker.py  maintenance_events.py  metrics.py  (+36 more)
docs/: ACM Foreacsting Fixing Plan Document.md  ACM Forecasting Fixing Guide.py  ACM Main Refactoring Analysis - Act.md  ACM_ANALYTICS_FLAW_REVIEW_2026_01_19.md  ACM_AUDIT_SUMMARY.md  ACM_CLUSTERING_EXECUTIVE_SUMMARY.md  ACM_IMPLEMENTATION_ROADMAP.md  ACM_MAIN_BLOAT_ANALYSIS.md  ACM_OUTPUT_REQUIREMENTS.md  ACM_SYSTEM_OVERVIEW.md  ACM_TABLE_ANALYTICS_AUDIT.md  ACM_TABLE_AUDIT_COMPLETE.md  ACM_TABLE_AUDIT_EXECUTIVE_SUMMARY.md  ACM_TABLE_AUDIT_README.md  ACM_V11_ANALYTICAL_AUDIT.md  ACM_V11_ANALYTICAL_FIXES.md  ACM_V11_COMPLETE_CORE_AUDIT.md  ACM_V11_COMPREHENSIVE_AUDIT.md  BATCH_MODE_WAVE_PATTERN_FIX.md  CHANGELOG.md  CLUSTERING_HDBSCAN_IMPLEMENTATION.md  CLUSTERING_IMPROVEMENT_RESEARCH.md  COLDSTART_SMARTSTART_AUDIT.md  CONTINUOUS_LEARNING_ROBUSTNESS.md  Comprehensive Audit of acm main.md  Comprehensive Audit of forecasting by Claude.md  DASHBOARD_COMPREHENSIVE_FIXES.md  ENHANCED_FORECASTING_USAGE.md  EQUIPMENT_IMPORT_PROCEDURE.md  FD_FAN_BATCH_COMMANDS.md  FIX_BATCH_DATA_TRUNCATION.md  FORECASTING_ARCHITECTURE.md  GRAFANA_DASHBOARD_QUERIES.md  GhostBusters_1.md  LOGGING_GUIDE.md  LOG_MESSAGE_AUDIT_2025.md  OBSERVABILITY.md  OBSERVABILITY_PLAN.md  OMR_UPGRADE_INTEGRATION_STATUS.md  OPERATING_CONDITION_IDENTIFICATION.md  (+52 more)
examples/: acm_distilled_demo.py
grafana_dashboards/: ACM Claude Generated To Be Fixed.json  ACM_Operator_Dashboard_v2.json  ACM_Operator_Dashboard_v3_FIXED.json  IMPLEMENTATION_SUMMARY.txt  README.md  acm_asset_health_deep_dive.json  acm_asset_story.json  acm_behavior.json  acm_comprehensive_equipment_health.json  acm_executive_summary.json  acm_fleet_overview.json  acm_forecasting.json  acm_forecasting_dashboard.json  acm_main_dashboard.backup.json  acm_main_dashboard.json  acm_observability.json  acm_observability_copy.json  acm_observability_v2.json  acm_observability_v3.json  acm_operations_monitor.json  acm_operator_dashboard.json  acm_ops_command_center.json  acm_performance_monitor.json  acm_sensor_deepdive.json  acm_sensor_regime_forensics.json  acm_v11_detectors.json  acm_v11_diagnostics.json  acm_v11_executive.json  acm_v11_forecasting.json  acm_v11_operations.json  asset_health_dashboard.json  asset_health_dashboard_v2.json  command_center_dashboard.json  import_payload.json  layman_asset_story.json  operator_dashboard.json
install/: INSTALLATION_ARCHITECTURE.md  Install-ACM.ps1  QUICKSTART.md  QuickInstall.bat  README.md  (+5 more)
rust_acm/: Cargo.toml  README.md  pyproject.toml
rust_acm/acm_clustering/: Cargo.toml
rust_acm/acm_clustering/src/: lib.rs
rust_acm/acm_detectors/: Cargo.toml
rust_acm/acm_detectors/src/: lib.rs
rust_acm/acm_features/: Cargo.toml
rust_acm/acm_features/src/: correlations.rs  lib.rs  rolling.rs  spectral.rs
rust_acm/acm_linalg/: Cargo.toml
rust_acm/acm_linalg/src/: lib.rs
rust_acm/src/: lib.rs
(+675 files in other folders)
