[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acmnxt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "joblib>=1.3",
]

[project.scripts]
acmnxt = "acmnxt.cli.train:main"

[tool.setuptools]
packages = { find = { include = ["acmnxt*"], exclude = ["ACM*","archive_legacy*","reports*"] } }

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
