[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acm-v4"
version = "0.1.0"
description = "ACM V5 — deterministic asset condition monitoring pipeline (Python-first, Rust-optional)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Team" }]
license = { text = "Proprietary" }

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "seaborn>=0.13",
  "pyodbc>=5.0",
  "statsmodels>=0.14",
  "scipy>=1.12",
  "psutil>=5.9",  # Resource monitoring
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
]
# For optional Rust bridge builds (if you decide to ship a wheel later)
rust = ["maturin>=1.6"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.acm]
entry = "core/acm_main.py"
