[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acm-v4"
version = "0.1.0"
description = "ACM V5 — deterministic asset condition monitoring pipeline (Python-first, Rust-optional)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Team" }]
license = { text = "Proprietary" }

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "seaborn>=0.13",
  "pyodbc>=5.0",
  "statsmodels>=0.14",
  "scipy>=1.12",
  "psutil>=5.9",  # Resource monitoring
  "structlog>=24.0",  # Structured logging
  "rich>=13.0",  # Colorful console output, progress bars
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "py-spy>=0.4",  # Ad-hoc profiling
  "scalene>=1.5",  # CPU+memory profiling
]
# OpenTelemetry instrumentation (optional - requires Grafana LGTM stack)
telemetry = [
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
  "opentelemetry-semantic-conventions>=0.46b0",
]
# Continuous profiling (pure Python, no Rust required)
profiling = [
  "yappi>=1.6",
]
# GPU monitoring (requires NVIDIA GPU)
gpu = [
  "nvidia-ml-py>=12.0",
]
# Full observability stack
observability = [
  "acm-v4[telemetry]",
  "acm-v4[profiling]",
  "acm-v4[gpu]",
]
# For optional Rust bridge builds (if you decide to ship a wheel later)
rust = ["maturin>=1.6"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.acm]
entry = "core/acm_main.py"
