[package]
name = "acm_features"
version.workspace = true
edition.workspace = true

[dependencies]
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
num-traits.workspace = true
rayon.workspace = true
rustfft.workspace = true
statrs.workspace = true

[dev-dependencies]
approx = "0.5"
